--- a/src/ToDo.Api/appsettings.json
+++ b/src/ToDo.Api/appsettings.json
@@ -1,10 +1,19 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=DESKTOP-BV8LL1L;Database=ToDoDb;Trusted_Connection=True;MultipleActiveResultSets=True;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+  "JWTSettings": {
+    "key": "cZNKtU191SkXZuqxe1amE6bpOqBKimG5",
+    "Issuer": "DanielBDev",
+    "Audience": "Ensolvers",
+    "DurationInMinutes": 30
   },
   "AllowedHosts": "*"
 }
